# campaignfinance-2023

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .ruff.toml  ADVERSARIAL_REVIEW.md  AGENTS.md  AGENTS.staging.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  MIGRATIONS.md  NOTES.md  PIPELINE_REVIEW.md  README.md  TASK.md  alembic.ini  campaignfinance_dev.db  conftest.py  docker-compose.yml  hello.py  logger.py  production_loader.py  project-constitution.md  pyproject.toml
.claude/: settings.json
.claude/agents/: code-reviewer.md  data-validator.md  implementer.md  notion-publisher.md  pipeline-auditor.md  postgresql-design-principles-gate.md  python-design-principles-gate.md  researcher.md  security-auditor.md  session-closer.md  spec-reviewer.md  task-critic.md  test-writer.md
.claude/evals/: README.md
.claude/hooks/: block-dangerous.sh  block-env-writes.sh  block-op-read.sh  block-raw-git.sh  domain-purity-check.sh  env-leak-check.sh  gate.py  goal-gate.sh  no-print-check.sh  pre-commit.sh  pre-pr-review-gate.sh  router-boundary-check.sh  sql-injection-check.sh  verify-completion.sh
.claude/skills/: README.md
.claude/workflows/: vectorized-ingest.js
.cursor/plans/: data_resolution_waves_d3596502.plan.md  db_bloat_multitask_254a4de6.plan.md  resolution_pipeline_fixes_ea1848c8.plan.md  review_remediation_run_2_cfd210f4.plan.md  review_remediation_waves_1d9dad56.plan.md  state_data_cli_5b78ffc6.plan.md  upsert_all_records_e5d0e7fb.plan.md
.cursor/rules/: 00-imports.mdc  01-python.mdc  02-tests.mdc  05-pipeline.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci-quality.yml  ci-report.yml  ci-resolve-integration.yml  ci-resolve-tests.yml  ci-tests.yml  ci.yml  dependency-scan.yml  flat.yml  release-please.yml  texas.yml  tool-config-verify.yml
abcs/: __init__.py  categories.py  download.py  file_reader.py  state_configs.py  validation.py
app/: _cf_entry.py  _path_setup.py  db_migrate.py  download_and_analyze.py  entrypoint.py  live_display.py  logger.py  main.py  op.py  scheduler.py  web_driver.py
app/abcs/: __init__.py  abc_category.py  abc_config.py  abc_db_loader.py  abc_download.py  abc_state_config.py  abc_validation.py  abc_validation_errors.py  base_models.py  categories.py  download.py  file_reader.py  state_configs.py  state_main.py  validation.py
app/cli/: __init__.py  __main__.py  convert.py  db.py  download.py  main.py  prepare.py  resolve_prune.py  state.py  verify.py
app/core/: README.md  __init__.py  analytics.py  builders.py  constants.py  db_resolve.py  enums.py  field_coverage.py  ingest_equivalence.py  load_cache.py  load_context.py  loader_bootstrap.py  loader_pipeline.py  officer_repository.py  processor.py  repository.py  unified_database.py  unified_field_library.py  unified_integration.py  unified_models.py  unified_sqlmodels.py  unified_state_loader.py  upsert.py  value_objects.py
app/db_loaders/: postgres_loader.py
app/funcs/: __init__.py  csv_reader.py  dataframe_utils.py  db_loader.py  file_exporters.py  file_loaders.py  progress_display.py  record_keygen.py  toml_reader.py  validation.py  validation_errors.py  validator_functions.py
app/ingest/: __init__.py  file_reader.py
app/logs/: campaign_finance.log.2023-11-14  campaign_finance.log.2023-11-30  campaign_finance.log.2024-01-30  campaign_finance.log.2024-02-26  campaign_finance.log.2024-03-06  campaign_finance.log.2024-03-31  campaign_finance.log.2024-06-03  campaign_finance.log.2024-12-23  campaign_finance.log.2025-01-21  campaign_finance.log.2025-01-31  campaign_finance.log.2025-02-11  campaign_finance.log.2025-02-25  campaign_finance.log.2025-06-29  campaign_finance.log.2025-08-04  campaign_finance.log.2025-12-03  campaign_finance.log.2026-01-17  campaign_finance.log.2026-01-27
app/resolve/: __init__.py  __main__.py  blocking.py  blocking_sql.py  cli.py  reverse.py  (+2 more)
db_loaders/: postgres_loader.py
docs/: ARCHITECTURE-DIAGRAM.md  ARCHITECTURE.md  DATA_DICTIONARY.md  DATA_RELATIONSHIPS.md  DEPLOYMENTS.md  GITBUTLER.md  GLOSSARY.md  GUARDRAILS.md  PRODUCTION_LOADER.md  README.md  RUNBOOK.md  STATES.md  TESTING.md  campaignfinance-explainer.html  code-review-2026-06-07.md  data-notes-tec-contributor-addresses.md  db-bloat-baseline-2026-06-17.md  db-bloat-baseline-2026-06-19.md  db-bloat-diagnosis-and-architecture-2026-06-20.md  db-reclaim.md  review-response-2026-06-07.md  upsert-all-records-plan-2026-06-20.md
funcs/: __init__.py  file_loaders.py
maintenance/: dedupe_addresses.py
migrations/: env.py
prompts/: README.md
scripts/: db_bloat_triage.sql  db_reclaim.py  db_size_report.py  dedup_dimensions.py  dedup_unified_transactions.py  reset_and_reingest.py  validate_texas_files.py  validate_texas_simple.py  verify_ingest.py
tests/: conftest.py  simple_address_test.py  test_address_dedup.py  test_address_dedup_fix.py  test_automatic_linking.py  test_committee_creation.py  test_committee_persons.py  test_db_resolve.py  test_entrypoint.py  test_limited_load.py  test_logging_config.py  test_model_normalization.py  test_officer_financial_activities.py  test_op_secrets.py  test_postgres_config.py  test_processor.py  test_production_loader_integration.py  test_record_keygen.py  test_reset_and_reingest.py  test_session_address_dedup.py  test_session_batching.py  test_simple_address_dedup.py  test_simple_transaction.py  test_single_record.py  test_sqlmodels.py  test_state_loader.py  test_texas_relationships.py  test_unified_database_guard.py  test_unified_loader.py  test_unified_models.py  test_unified_processor.py  test_unified_state_loader_injection.py  test_unified_state_loader_sql.py  test_validator_property.py  test_validators_hypothesis.py  test_value_objects.py  test_versioning.py  test_wave1_linkage.py  test_wave2_report_ingest.py  test_wave4_fk_parity.py
tmp/: diag_committee_persons.py  diag_dedup_addr_key.py  diag_residual_oversplits.py  extract_zip.js  readd_fks_and_diff.py  resolve_one.py  smoke_default_flip.py  verify_alembic_baseline.py
transform/: __init__.py  _spikedb.py  reconcile.py  silver_load.py
(+632 files in other folders)
