[project]
name = "campaignfinance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.8"
dependencies = [
    "aiocsv>=1.3.2",
    "aiofiles>=24.1.0",
    "aiojobs>=1.3.0",
    "icecream>=2.1.3",
    "inject>=5.2.1",
    "nameparser>=1.1.3",
    "onepassword-sdk>=0.1.5",
    "pandas>=2.2.3",
    "phonenumbers>=8.13.52",
    "probablepeople>=0.5.6",
    "pydantic>=2.10.4",
    "pydantic-extra-types>=2.10.1",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "selenium>=4.27.1",
    "sqlmodel>=0.0.22",
    "psycopg2-binary>=2.9.9",
    "tomli>=2.2.1",
    "tqdm>=4.67.1",
    "usaddress-scourgify>=0.6.0",
    "usaddress>=0.5.11",
    "jupyter>=1.1.1",
    "rich>=13.9.4",
    "polars>=1.19.0",
    "web-scrape-utils",
    "pyarrow>=19.0.0",
    "hypothesis>=6.112.1",
    "pytest>=8.3.3",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.uv.sources]
web-scrape-utils = { git = "https://github.com/jreakin/jre-web-scrape-utils.git", branch = "jan25-web-scrape" }

[tool.pytest.ini_options]
testpaths = ["tests", "app/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "if __name__ == .__main__.:"
]
