[project]
name = "campaignfinance"
version = "0.1.0"
description = "Aggregates, normalizes, and analyzes US state campaign-finance data behind a unified cross-state data model."
readme = "README.md"
requires-python = ">=3.12.8"
dependencies = [
    "aiocsv>=1.3.2",
    "aiofiles>=24.1.0",
    "aiojobs>=1.3.0",
    "icecream>=2.1.3",
    "inject>=5.2.1",
    "nameparser>=1.1.3",
    "onepassword-sdk>=0.1.5",
    "pandas>=2.2.3",
    "phonenumbers>=8.13.52",
    "probablepeople>=0.5.6",
    "pydantic>=2.10.4",
    "pydantic-extra-types>=2.10.1",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "selenium>=4.27.1",
    "sqlmodel>=0.0.22",
    "tomli>=2.2.1",
    "tqdm>=4.67.1",
    "usaddress-scourgify>=0.6.0",
    "usaddress>=0.5.11",
    "jupyter>=1.1.1",
    "rich>=13.9.4",
    "polars>=1.19.0",
    "typer>=0.25.1",
    "jellyfish>=1.2.1",
    "splink>=4.0.16,<4.0.17",
    "duckdb>=1.5.3",
    "psycopg2-binary>=2.9.12",
]

[project.scripts]
cf = "app.entrypoint:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
package = true
# probablepeople pins doublemetaphone 1.1 (sdist-only); 1.2 ships cp312 wheels.
override-dependencies = ["doublemetaphone==1.2"]

[tool.uv.workspace]
members = ["packages/*"]

[tool.abstract-data]
# Used by the project-alignment skill to detect project type on future runs.
project_type = "pipeline"
template_version = "1.8.8"
aligned = "2026-05-23"

[dependency-groups]
dev = [
    "hypothesis>=6.152.9",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]
# Ruff configuration lives in .ruff.toml.

[tool.pytest.ini_options]
markers = [
    "integration: requires tmp/texas and/or Postgres; excluded from default CI",
]

[tool.coverage.run]
core = "sysmon"
# Resolve pipeline has its own CI job (tests/resolve); omit from the main gate.
omit = [
    "app/resolve/*",
]

[tool.coverage.report]
fail_under = 70
